[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "isodate>=0.7.2",
    "openai>=1.79.0",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "werkzeug>=3.1.3",
]
